...
            <objects>
                <navigationController id="cy3-9O-t43" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Sun" image="sun" id="HvB-C1-528">
                        <color key="badgeColor" systemColor="systemIndigoColor"/>
                    </tabBarItem>
...
            <objects>
                <viewController id="As8-Wt-vOX" customClass="SunViewController" customModule="SunsetApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="49n-Ac-Tdp">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                        <rect key="frame" x="0.0" y="76" width="260" height="21.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lff-nm-tU7">
                                                <rect key="frame" x="0.0" y="0.0" width="90" height="21.5"/>
                                                <constraints>
...
                                        <segments>
                                            <segment title="Today"/>
                                            <segment title="Tomorrow"/>
                                        </segments>
                                        <color key="selectedSegmentTintColor" systemColor="systemIndigoColor"/>
...
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" image="active"/>
                                        <connections>
                                            <action selector="activeNotificationButtonTapped:" destination="As8-Wt-vOX" eventType="touchUpInside" id="Cxh-Tu-H1g"/>
...
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" image="cancel"/>
                                        <connections>
                                            <action selector="cancelNotificationTapped:" destination="As8-Wt-vOX" eventType="touchUpInside" id="55c-6h-AMJ"/>
...
                    <navigationItem key="navigationItem" title="Sun" id="z4f-hq-FvN">
                        <barButtonItem key="backBarButtonItem" title="Back" id="Ha2-Vb-gL4"/>
                        <barButtonItem key="leftBarButtonItem" title="Refresh" image="refresh" id="IfF-PN-WiD">
                            <color key="tintColor" systemColor="systemIndigoColor"/>
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Info" image="info" id="2v0-sA-njQ">
                            <color key="tintColor" systemColor="systemIndigoColor"/>
                            <connections>
...
